--- a/createPost.html
+++ b/createPost.html
@@ -14,7 +14,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <script src="https://cdn.ckeditor.com/ckeditor5/27.1.0/classic/ckeditor.js"></script>
-
 </head>
 <style>
     * {
@@ -66,6 +65,8 @@
     </nav>
     <div class="container text-center main">
         <form action="" class="form">
+            <img class="mb-4" src="/assets/img/logo.png" alt="" width="72" height="72">
+            <h1 class="h3 mb-3 font-weight-normal">Create your Post</h1>
             <div class="form-group">
                 <label for="exampleFormControlInput1">Title</label>
                 <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Title">
